draggable bug & overflow

--- a/src/components/MessageBox/MessageBox.less
+++ b/src/components/MessageBox/MessageBox.less
@@ -2,9 +2,11 @@
     &.cm-messageBox{
       background: #fff;
       position: absolute;
-      top: 50%;
-      left: 50%;
       z-index: 50000;
       min-width: 300px;
+      transform: translate(-50%, -50%);
+      -webkit-transform: translate(-50%, -50%);
+      -moz-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
     }
 }
